--- a/src/components/popup/Popup.scss
+++ b/src/components/popup/Popup.scss
@@ -1,73 +1,25 @@
 .popup {
+  $maximum-height: 600px;
+  $main-height: 270px;
+  $padding: 18px;
+
   width: 600px;
-  height: 300px;
   font-size: 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 3%;
-
-  .header {
-    width: 100%;
+  padding: $padding;
+  
+  &__main {
+    height: $main-height;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-
-    .title {
-      width: 80px;
-      font-size: .8em;
-      font-weight: 400;
-      margin: 0;
-      padding: 0;
-    }
+    align-items: center;
+    
   }
 
-
-  .formula-box {
-    width: 100%;
-    
-    .formula {
-      width: 100%;
-      font-size: 0.8em;
-      cursor: pointer;
-      margin: 3% 0;
-      text-align: center;
-
-      .katex-display {
-        max-height: 100px;
-        overflow: auto;
-        margin: 0;
-
-        .katex {
-          display: inline-block;
-
-          .katex-html {
-            display: inline-block;
-          }
-        }
-      }
-      .tooltip {
-        font-size: 0.5em;
-        font-weight: bold;
-        position: absolute;
-        margin-left: 10px;
-      }
-    }
-
-    .textarea {
-      width: 100%;
-      height: 70px;
-      resize: none;
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    .support-table {
-      display: block;
-      text-align: right;
-      font-size: .5em;
-    }
+  .history__list {
+    $margin-top: 20px;
+    margin-top: $margin-top;
+    max-height: $maximum-height - $main-height - $padding * 2 - $margin-top;
+    overflow-y: overlay;
   }
 }
