--- a/src/components/popup/Popup.scss
+++ b/src/components/popup/Popup.scss
@@ -14,6 +14,15 @@
     justify-content: space-between;
     align-items: center;
     
+    .group {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      .footer {
+        margin-top: 1%;
+      }
+    }
   }
 
   .history__list {
